--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ name                     : &name "Abid Ali"
 description              : &description "Early Stage Researcher (PhD) at INRIA, Sophia Antipolis, France"
 url                      : https://abalikhan.github.io/abidali.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "https://abalikhan.github.io/abidali.github.io"
+repository               : "https://abalikhan.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
